src/objects/Time_Sheet__c.object
<CustomObject>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is updated by using Process Builder. Used to Send the Time Sheet approval for Project Manager</description>
        <inlineHelpText>Time Sheet Approved By Manager</inlineHelpText>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Time_Sheet1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Time Sheet</relationshipLabel>
        <relationshipName>Time_Sheet</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Billing__c</fullName>
        <label>Total Billing</label>
        <summarizedField>Time_Entry__c.Total_Billing_Price__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time__c</fullName>
        <inlineHelpText>In Minutes</inlineHelpText>
        <label>Total Time</label>
        <summarizedField>Time_Entry__c.Minutes__c</summarizedField>
        <summaryForeignKey>Time_Entry__c.Time_Sheet__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Time_in_Hours__c</fullName>
        <formula>TEXT(FLOOR( Total_Time__c / 60))&amp;&quot;:&quot;&amp;TEXT(MOD( Total_Time__c ,60))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Time in Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekend_Date__c</fullName>
        <label>Weekending Date</label>
        <type>Date</type>
    </fields>
    <label>Time Sheet</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{DD}{MM}{YYYY}{000}</displayFormat>
        <label>Time Sheet Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Sheet</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>